--- a/css/styles.css
+++ b/css/styles.css
@@ -150,3 +150,29 @@ a.custom-card:hover {
   background-color: crimson;
   color: antiquewhite;
 }
+
+#info-user{
+  background-color: cadetblue;
+  color: aliceblue;
+  padding-left: 10px;
+  padding-right: 10px;
+border-radius: 10px;
+}
+
+#salir{
+  width:50px;
+  height: 30px;
+  margin-left: 70%;
+  margin-bottom: 5px;
+background-color: gray;
+color: aliceblue;
+}
+
+.sortbutton{
+  background-color: #414346;
+  border-radius: 5px;
+}
+
+.priceinput{
+  width: 100px;
+}
