--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
-.jumbotron, .card-body, .container, .site-header{
-    font-family: 'Raleway', serif !important;
+.jumbotron,
+.card-body,
+.container,
+.site-header {
+  font-family: "Raleway", serif !important;
 }
 
-.jumbotron .display-4{
-    font-weight: bold;
+.jumbotron .display-4 {
+  font-weight: bold;
 }
 
 .jumbotron {
   height: 50vh;
   padding: 5em inherit;
   margin-bottom: 0;
-  background-color: #53C0FB;
-  background: url('../img/cover_back.png');
+  background-color: #53c0fb;
+  background: url("../img/cover_back.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -41,7 +44,7 @@
   text-shadow: 1px 1px 2px grey;
 }
 
-.jumbotron .lead{
+.jumbotron .lead {
   font-size: 38px;
 }
 
@@ -51,12 +54,12 @@ footer {
 }
 
 footer p {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .site-header a {
   color: white;
-  transition: ease-in-out color .15s;
+  transition: ease-in-out color 0.15s;
 }
 
 .light-text {
@@ -67,15 +70,15 @@ footer p {
   color: black;
 }
 
-.dropzone{
-  border: 2px dashed #0087F7;
+.dropzone {
+  border: 2px dashed #0087f7;
   border-radius: 5px;
   background: white;
 }
 
-.alert{
+.alert {
   position: fixed;
-  top:80px;
+  top: 80px;
   width: 50%;
   left: 50%;
   transform: translate(-50%, 0);
@@ -86,7 +89,7 @@ footer p {
   position: relative;
   width: 64px;
   height: 64px;
-  top:50%;
+  top: 50%;
   left: 50%;
 }
 .lds-ring div {
@@ -119,13 +122,13 @@ footer p {
   }
 }
 
-#spinner-wrapper{
+#spinner-wrapper {
   position: fixed;
-  background-color: rgba(0,0,0,0.5);
-  width:100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
   height: 100%;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   z-index: 1021;
   display: none;
 }
@@ -140,39 +143,51 @@ a.custom-card:hover {
   color: orange;
 }
 
-.autoimagen{
+.autoimagen {
   display: flex;
   height: 200px;
   justify-content: center;
 }
 
-.invalid{
+.invalid {
   background-color: crimson;
   color: antiquewhite;
 }
 
-#info-user{
+#info-user {
   background-color: cadetblue;
   color: aliceblue;
+  padding-top: 5px;
   padding-left: 10px;
   padding-right: 10px;
-border-radius: 10px;
+  border-radius: 10px;
 }
 
-#salir{
-  width:50px;
+#user{
+  margin-bottom: 0px;
+}
+
+#salir {
+  width: 50px;
   height: 30px;
-  margin-left: 70%;
+  margin-left: 75%;
   margin-bottom: 5px;
-background-color: gray;
-color: aliceblue;
+  background-color: gray;
+  color: aliceblue;
 }
 
-.sortbutton{
+.sortbutton {
   background-color: #414346;
   border-radius: 5px;
 }
 
-.priceinput{
+.priceinput {
   width: 100px;
+}
+
+#productstitle {
+  background-color: rgb(113, 113, 114);
+  margin-left: 150px;
+  margin-right: 150px;
+  border-radius: 20px;
 }
