--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ a.custom-card:hover {
 }
 
 .checked {
-  color: orange;
+  color:#ffbf00;
 }
 
 .autoimagen {
@@ -190,4 +190,28 @@ a.custom-card:hover {
   margin-left: 150px;
   margin-right: 150px;
   border-radius: 20px;
+}
+
+/* Estrellitas */
+.star-rating {
+  direction: rtl;
+  display: inline-block;
+  padding: 0;
+}
+
+.star-rating input[type=radio] {
+  display: none
+}
+
+.star-rating label {
+  color: rgb(133, 142, 192);
+  font-size: 25px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label,
+.star-rating input[type=radio]:checked ~ label {
+  color: #ffbf00
 }
